--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,6 @@
 		<jacocoVersion>0.7.9</jacocoVersion>
 		<lombokVersion>1.18.26</lombokVersion>
 		<openmrsFhir2Version>1.11.0</openmrsFhir2Version>
-		<hapifhirVersion>5.4.0</hapifhirVersion>
-		<ucumVersion>1.0.3</ucumVersion>
 	</properties>
 
 	<build>
@@ -139,164 +137,6 @@
 				</exclusions>
 			</dependency>
 
-			<dependency>
-				<groupId>ca.uhn.hapi.fhir</groupId>
-				<artifactId>hapi-fhir-base</artifactId>
-				<version>${hapifhirVersion}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>org.slf4j</groupId>
-						<artifactId>slf4j-api</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.slf4j</groupId>
-						<artifactId>jcl-over-slf4j</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>commons-io</groupId>
-						<artifactId>commons-io</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.eclipse.jetty</groupId>
-						<artifactId>jetty-server</artifactId>
-					</exclusion>
-					<exclusion>
-						<artifactId>servlet-api</artifactId>
-						<groupId>javax.servlet</groupId>
-					</exclusion>
-					<exclusion>
-						<groupId>com.fasterxml.jackson.core</groupId>
-						<artifactId>jackson-databind</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>ca.uhn.hapi.fhir</groupId>
-				<artifactId>hapi-fhir-server</artifactId>
-				<version>${hapifhirVersion}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>org.springframework</groupId>
-						<artifactId>spring-messaging</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.jetbrains.kotlin</groupId>
-						<artifactId>kotlin-stdlib-jdk8</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>ca.uhn.hapi.fhir</groupId>
-				<artifactId>hapi-fhir-client</artifactId>
-				<version>${hapifhirVersion}</version>
-			</dependency>
-			<dependency>
-				<groupId>ca.uhn.hapi.fhir</groupId>
-				<artifactId>hapi-fhir-structures-dstu3</artifactId>
-				<version>${hapifhirVersion}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>org.jetbrains.kotlin</groupId>
-						<artifactId>kotlin-stdlib-jdk8</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>ca.uhn.hapi.fhir</groupId>
-				<artifactId>hapi-fhir-structures-r4</artifactId>
-				<version>${hapifhirVersion}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>xpp3</groupId>
-						<artifactId>xpp3</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.jetbrains.kotlin</groupId>
-						<artifactId>kotlin-stdlib-jdk8</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>ca.uhn.hapi.fhir</groupId>
-				<artifactId>hapi-fhir-converter</artifactId>
-				<version>${hapifhirVersion}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>net.sf.saxon</groupId>
-						<artifactId>Saxon-HE</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>ca.uhn.hapi.fhir</groupId>
-						<artifactId>org.hl7.fhir.dstu2</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>ca.uhn.hapi.fhir</groupId>
-						<artifactId>org.hl7.fhir.dstu2016may</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>ca.uhn.hapi.fhir</groupId>
-						<artifactId>org.hl7.fhir.dstu3</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>ca.uhn.hapi.fhir</groupId>
-						<artifactId>org.hl7.fhir.r4</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>ca.uhn.hapi.fhir</groupId>
-						<artifactId>org.hl7.fhir.r5</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.jetbrains.kotlin</groupId>
-						<artifactId>kotlin-stdlib-jdk8</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>ca.uhn.hapi.fhir</groupId>
-				<artifactId>hapi-fhir-validation</artifactId>
-				<version>${hapifhirVersion}</version>
-				<scope>test</scope>
-				<exclusions>
-					<exclusion>
-						<groupId>xpp3</groupId>
-						<artifactId>xpp3</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>net.sf.saxon</groupId>
-						<artifactId>Saxon-HE</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>ca.uhn.hapi.fhir</groupId>
-				<artifactId>hapi-fhir-validation-resources-r4</artifactId>
-				<version>${hapifhirVersion}</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>ca.uhn.hapi.fhir</groupId>
-				<artifactId>hapi-fhir-validation-resources-dstu3</artifactId>
-				<version>${hapifhirVersion}</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.fhir</groupId>
-				<artifactId>ucum</artifactId>
-				<version>${ucumVersion}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>xpp3</groupId>
-						<artifactId>xpp3</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-
-<!--			<dependency>-->
-<!--				<groupId>org.openmrs.web</groupId>-->
-<!--				<artifactId>openmrs-web</artifactId>-->
-<!--				<version>${openmrsPlatformVersion}</version>-->
-<!--				<scope>provided</scope>-->
-<!--			</dependency>-->
 
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
@@ -305,35 +145,13 @@
 				<scope>provided</scope>
 			</dependency>
 
-			<dependency>
-				<groupId>org.openmrs.module</groupId>
-				<artifactId>fhir2-omod</artifactId>
-				<version>${openmrsFhir2Version}</version>
-				<scope>provided</scope>
-			</dependency>
-
-
-			<!-- OpenMRS Test dependencies -->
 <!--			<dependency>-->
-<!--				<groupId>org.openmrs.web</groupId>-->
-<!--				<artifactId>openmrs-web</artifactId>-->
-<!--				<version>${openmrsPlatformVersion}</version>-->
-<!--				<type>test-jar</type>-->
-<!--				<scope>test</scope>-->
+<!--				<groupId>org.openmrs.module</groupId>-->
+<!--				<artifactId>fhir2-omod</artifactId>-->
+<!--				<version>${openmrsFhir2Version}</version>-->
+<!--				<scope>provided</scope>-->
 <!--			</dependency>-->
-			<dependency>
-				<groupId>org.openmrs.api</groupId>
-				<artifactId>openmrs-api</artifactId>
-				<version>${openmrsPlatformVersion}</version>
-				<type>test-jar</type>
-				<scope>test</scope>
-				<exclusions>
-					<exclusion>
-						<groupId>javax.servlet</groupId>
-						<artifactId>servlet-api</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
+
 			<dependency>
 				<groupId>org.openmrs.test</groupId>
 				<artifactId>openmrs-test</artifactId>
@@ -395,26 +213,17 @@
 				</exclusions>
 				<scope>test</scope>
 			</dependency>
+
 			<dependency>
-				<groupId>ca.uhn.hapi.fhir</groupId>
-				<artifactId>hapi-fhir-validation-resources-r4</artifactId>
-				<version>${hapifhirVersion}</version>
+				<groupId>org.openmrs.api</groupId>
+				<artifactId>openmrs-api</artifactId>
+				<version>${openmrsPlatformVersion}</version>
+				<type>test-jar</type>
 				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>ca.uhn.hapi.fhir</groupId>
-				<artifactId>hapi-fhir-validation-resources-dstu3</artifactId>
-				<version>${hapifhirVersion}</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.fhir</groupId>
-				<artifactId>ucum</artifactId>
-				<version>${ucumVersion}</version>
 				<exclusions>
 					<exclusion>
-						<groupId>xpp3</groupId>
-						<artifactId>xpp3</artifactId>
+						<groupId>javax.servlet</groupId>
+						<artifactId>servlet-api</artifactId>
 					</exclusion>
 				</exclusions>
 			</dependency>
