Kavitha|Kalai - Medication Administration Create API Changes

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -16,10 +16,10 @@
 	<description>Medication Administration module contains all backend APIs for Medication Administration</description>
 
 	<properties>
-		<MODULE_ID>openmrs-medication-administration</MODULE_ID>
+		<MODULE_ID>a-medication-administration</MODULE_ID>
 		<MODULE_NAME>${project.name}</MODULE_NAME>
 		<MODULE_VERSION>${project.version}</MODULE_VERSION>
-		<MODULE_PACKAGE>${project.groupId}.${MODULE_ID}</MODULE_PACKAGE>
+		<MODULE_PACKAGE>org.bahmni.module.medication-administration</MODULE_PACKAGE>
 	</properties>
 
 	<build>
