--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 
 	<licenses>
 		<license>
-			<name>GNU AFFERO GENERAL PUBLIC LICENSE</name>
-			<url>https://www.gnu.org/licenses/agpl-3.0.txt</url>
+			<name>Mozilla Public License 2.0 with Healthcare Disclaimer</name>
+			<url>https://openmrs.org/license</url>
 		</license>
 	</licenses>
 	<developers>
