--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.bahmni.module</groupId>
 		<artifactId>medication-administration</artifactId>
-		<version>1.0.0</version>
+		<version>1.1.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>medication-administration-omod</artifactId>
